[package]
name = "argos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.6"
digest = "0.10.5"
clap = { version = "4.0.15", features = ["derive"] }
